# fundamentals

./: .gitignore  .gitmodules  .readthedocs.yaml  CHANGES.md  CITATION.cff  Jenkinsfile  MANIFEST.in  README.md  README.rst  README.rst-e  bk_README.md  bk_setup.py  blog-post.rst-e  default_settings.yaml  nose2.cfg  profile.prof  pyproject.toml  setup.py
bk_docs/: Makefile
docs/: Makefile  requirements.txt
fundamentals/: __init__.py  __version__.py  bk_default_settings.yaml  cl_utils.py  daemonise.py  default_settings.yaml  docstring_test.py  fmultiprocess.py  logs.py  multiprocess.py  nose2.cfg  setup.cfg  test_settings.yaml  times.py  tools.py  utKit.py
htmlcov/: fundamentals___init___py.html  fundamentals___version___py.html  fundamentals_cl_utils_py.html  fundamentals_commonutils___init___py.html  fundamentals_commonutils_getpackagepath_py.html  fundamentals_docstring_test_py.html  fundamentals_download___init___py.html  fundamentals_download__dump_files_to_local_drive_py.html  fundamentals_download__fetch_py.html  fundamentals_download_append_now_datestamp_to_filename_py.html  fundamentals_download_extract_filename_from_url_py.html  fundamentals_download_get_now_datetime_filestamp_py.html  fundamentals_download_multiobject_download_py.html  fundamentals_download_tests___init___py.html  fundamentals_download_tests_test__dump_files_to_local_drive_py.html  fundamentals_download_tests_test__fetch_py.html  fundamentals_download_tests_test_append_now_datestamp_to_filename_py.html  fundamentals_download_tests_test_extract_filename_from_url_py.html  fundamentals_download_tests_test_get_now_datetime_filestamp_py.html  fundamentals_download_tests_test_multiobject_download_py.html  fundamentals_files___init___py.html  fundamentals_files_fileChunker_py.html  fundamentals_files_list_of_dictionaries_to_mysql_inserts_py.html  fundamentals_files_recursive_directory_listing_py.html  fundamentals_files_tag_py.html  fundamentals_files_tests___init___py.html  fundamentals_files_tests_test_fileChunker_py.html  fundamentals_files_tests_test_list_of_dictionaries_to_mysql_inserts_py.html  fundamentals_files_tests_test_recursive_directory_listing_py.html  fundamentals_files_tests_test_tag_py.html  fundamentals_fmultiprocess_py.html  fundamentals_logs_py.html  (+49 more)
reports/: coverage.txt  (+2 more)
(+360 files in other folders)
